setting up user authentication

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ pipenv = "*"
 django = "*"
 mysqlclient = "*"
 djangorestframework = "*"
+djoser = "*"
+django-rest-authtoken = "*"
 
 [dev-packages]
 
